--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,12 @@ html, body, #root {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
 body {
+    margin: 0;
+    height: 100%;
+    width: 100%; /* Add this to ensure full width */
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column; /* Flex direction to allow stacking of elements */
     background-color: #f5f5f5;
 }
